# JAPIProjects

./: CMakeLists.txt  README.md
.github/workflows/: build-mingw.yml
CPKModLoader/: CMakeLists.txt
CPKModLoader/src/: main.cpp
FreeCam/: CMakeLists.txt
FreeCam/src/: camera.h  plugin.cpp  plugin.h
NoCursorTrap/: CMakeLists.txt
NoCursorTrap/src/: plugin.cpp
SkipIntro/: CMakeLists.txt
SkipIntro/src/: plugin.cpp
